--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/images/logo.png" />
-    <title>Gimnasio</title>
+    <title>InstaFit</title>
   </head>
   <body>
     <div id="root"></div>
